{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 951,
  "lineage": "e82a38fa-b3eb-2368-ca37-a4c5c1d3bdc0",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:656554891976:loadbalancer/app/ecs-alb/7e67fbd29948d26e",
            "arn_suffix": "app/ecs-alb/7e67fbd29948d26e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-861034055.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:656554891976:loadbalancer/app/ecs-alb/7e67fbd29948d26e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eb054560f935b718"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0732bb0d2f2caa6a1"
              },
              {
                "subnet_id": "subnet-0accc3ca028988305"
              }
            ],
            "subnets": [
              "subnet-0732bb0d2f2caa6a1",
              "subnet-0accc3ca028988305"
            ],
            "tags": {
              "Name": "ecs-alb"
            },
            "tags_all": {
              "Name": "ecs-alb"
            },
            "vpc_id": "vpc-0d027f4c6d4bcfdab",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.ECS-nat",
            "module.vpc.aws_route_table.NAT-Gateway-RT",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.Nat-Gateway-RT-Association-subnet",
            "module.vpc.aws_route_table_association.Nat-Gateway-RT-Association-subnet2",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_route_table_association.subnet_route2",
            "module.vpc.aws_security_group.security_group",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:656554891976:listener/app/ecs-alb/7e67fbd29948d26e/3551ebfe64d5cea6",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:656554891976:targetgroup/ecs-target-group/47fb465cfe4c841c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:656554891976:listener/app/ecs-alb/7e67fbd29948d26e/3551ebfe64d5cea6",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:656554891976:loadbalancer/app/ecs-alb/7e67fbd29948d26e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.ecs_alb",
            "module.alb.aws_lb_target_group.ecs_tg",
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.ECS-nat",
            "module.vpc.aws_route_table.NAT-Gateway-RT",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.Nat-Gateway-RT-Association-subnet",
            "module.vpc.aws_route_table_association.Nat-Gateway-RT-Association-subnet2",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_route_table_association.subnet_route2",
            "module.vpc.aws_security_group.security_group",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:656554891976:targetgroup/ecs-target-group/47fb465cfe4c841c",
            "arn_suffix": "targetgroup/ecs-target-group/47fb465cfe4c841c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:656554891976:targetgroup/ecs-target-group/47fb465cfe4c841c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.ECS-nat",
            "module.vpc.aws_route_table.NAT-Gateway-RT",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.Nat-Gateway-RT-Association-subnet",
            "module.vpc.aws_route_table_association.Nat-Gateway-RT-Association-subnet2",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_route_table_association.subnet_route2",
            "module.vpc.aws_security_group.security_group",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Nat-Gateway-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066a425a70d3d9e5f",
            "association_id": "eipassoc-0a507f281e992ce37",
            "domain": "vpc",
            "id": "eipalloc-066a425a70d3d9e5f",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0822b6c0aed19d3ef",
            "private_dns": "ip-10-0-3-161.us-west-2.compute.internal",
            "private_ip": "10.0.3.161",
            "public_dns": "ec2-35-83-187-16.us-west-2.compute.amazonaws.com",
            "public_ip": "35.83.187.16",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:internet-gateway/igw-0c549ac071c1546db",
            "id": "igw-0c549ac071c1546db",
            "owner_id": "656554891976",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ECS-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-066a425a70d3d9e5f",
            "association_id": "eipassoc-0a507f281e992ce37",
            "connectivity_type": "public",
            "id": "nat-09523201c122391eb",
            "network_interface_id": "eni-0822b6c0aed19d3ef",
            "private_ip": "10.0.3.161",
            "public_ip": "35.83.187.16",
            "subnet_id": "subnet-0accc3ca028988305"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT-Gateway-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:route-table/rtb-0a97d51fa04587625",
            "id": "rtb-0a97d51fa04587625",
            "owner_id": "656554891976",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09523201c122391eb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table for NAT Gateway"
            },
            "tags_all": {
              "Name": "Route Table for NAT Gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.ECS-nat",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:route-table/rtb-00913047bd0788019",
            "id": "rtb-00913047bd0788019",
            "owner_id": "656554891976",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c549ac071c1546db",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-091176e92187ecc41",
            "route_table_id": "rtb-0a97d51fa04587625",
            "subnet_id": "subnet-0951b569fd29ca27c"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.ECS-nat",
            "module.vpc.aws_route_table.NAT-Gateway-RT",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nat-Gateway-RT-Association-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537c119725461c2d",
            "route_table_id": "rtb-0a97d51fa04587625",
            "subnet_id": "subnet-089a4c848c11eb381"
          },
          "dependencies": [
            "module.vpc.aws_eip.Nat-Gateway-EIP",
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_nat_gateway.ECS-nat",
            "module.vpc.aws_route_table.NAT-Gateway-RT",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_route_table_association.subnet_route",
            "module.vpc.aws_subnet.subnet2",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e15b65f26c9ea90",
            "route_table_id": "rtb-00913047bd0788019",
            "subnet_id": "subnet-0accc3ca028988305"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet3",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_route2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e626220b608f2031",
            "route_table_id": "rtb-00913047bd0788019",
            "subnet_id": "subnet-0732bb0d2f2caa6a1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet4",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:security-group/sg-0eb054560f935b718",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb054560f935b718",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ecs-security-group",
            "name_prefix": "",
            "owner_id": "656554891976",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:subnet/subnet-0951b569fd29ca27c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0951b569fd29ca27c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656554891976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:subnet/subnet-089a4c848c11eb381",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089a4c848c11eb381",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656554891976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:subnet/subnet-0accc3ca028988305",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0accc3ca028988305",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656554891976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:subnet/subnet-0732bb0d2f2caa6a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0732bb0d2f2caa6a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "656554891976",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d027f4c6d4bcfdab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:656554891976:vpc/vpc-0d027f4c6d4bcfdab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d67271d8506be32b",
            "default_route_table_id": "rtb-053f6c14b6c5f6ddd",
            "default_security_group_id": "sg-0c150eff63cb8be3f",
            "dhcp_options_id": "dopt-098b2cf7642f2353b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d027f4c6d4bcfdab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053f6c14b6c5f6ddd",
            "owner_id": "656554891976",
            "tags": {
              "name": "main"
            },
            "tags_all": {
              "name": "main"
            }
          }
        }
      ]
    }
  ]
}